@startuml engine

class Engine {
  + load_plugin(plugin_filename): Proxy
  + unload_plugin(plugin_filename): void
  - _start_plugin_process(plugin_filename): dict
  - _wait_until_ready(host, port): void
}

class PluginStartupError

class Proxy

class PluginManager {
  + <registered plugin functions>
}

Engine ..> Proxy : creates proxy
Engine ..> PluginManager : spawns as\nseparate process
Engine ..> PluginStartupError : raises error

class engine_utils {
  + import_plugin_manager(plugin_filename): PluginManager
  + build_registered_functions(plugin_instance): dict
}

class PluginLoadError

engine_utils ..> PluginManager : imports
engine_utils ..> PluginLoadError : raises error
Engine ..> engine_utils : uses (indirectly,\nvia plugin_server)

@enduml
